--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,7 @@ body {
 
   display: grid;
   place-items: center;
+  background: url(/images/bg-leaves.jpg);
 }
 
 /* Containers styles */
@@ -97,9 +98,9 @@ body {
     "content";
   /* place-items: center; */
 
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
   background-image: var(--linear-gradient-bg);
 }
 
@@ -345,7 +346,8 @@ body {
 }
 /* Footer styles */
 footer {
-  background-color: white;
+  /* background-color: white; */
+
   color: var(--clr-neutral-dark-grayish-red);
   text-align: center;
 }
