Fixed url on background image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,7 +81,7 @@ body {
 
   display: grid;
   place-items: center;
-  background: url(/images/bg-leaves.jpg);
+  background: url(/base-apparel-coming-soon/images/bg-leaves.jpg);
 }
 
 /* Containers styles */
